After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659830 - Arrow keys should always navigate, never scroll
Arrow keys should always navigate, never scroll
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.1.x
Other Linux
: Normal normal
: GNOME3.6
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-22 14:12 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-09-01 19:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test for modifier keys correctly in EogWindow (2.33 KB, patch)
2012-08-29 23:16 UTC, Federico Mena Quintero
committed Details | Review
bgo#659830 - Arrow keys should always navigate, never scroll (7.57 KB, patch)
2012-08-29 23:16 UTC, Federico Mena Quintero
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-09-22 14:12:12 UTC
If the picture fits fully on the screen, left/right arrows navigate forward and back. If there's a scrollview, the arrow keys scroll the picture instead. Just a bit annoying...
Comment 1 Federico Mena Quintero 2012-01-24 22:51:50 UTC
I'd like to know how other image viewers handle this.  Can you please test some that feel good, and tell us how they do it?

(For reference, the code is in eog-window.c:eog_window_key_press())
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-01-24 23:05:41 UTC
I'm not sure of any image viewers that feel good.
Comment 3 Matt Reid 2012-08-28 02:47:02 UTC
For what it's worth, in the Windows Photo Viewer in Win7, arrow keys are always next/previous, even if you're zoomed in and there's a scrollview. To pan the image with the keyboard, you can hold ALT and use the arrow keys. +/- controls zoom.

Makes more sense to me to keep it consistent, and let them use a modifier if they want to make the arrow keys do something else. I more often use the mouse and the keyboard in conjunction when I'm navigating through images though, where I can zoom in with the scrollwheel and pan with the mouse by dragging around, and then use the arrow keys to flip through without having to mouse to the next/previous buttons. So for that use case, having to press ALT and then arrow keys to navigate is much more difficult to pull off one handed than if I could simply press an arrow key.
Comment 4 Federico Mena Quintero 2012-08-28 14:19:04 UTC
I find myself agreeing with this now.  Shotwell has the same behavior (unzoomed makes arrows navigate; zoomed makes arrows scroll).  Arrows should indeed always navigate.
Comment 5 Federico Mena Quintero 2012-08-29 23:16:18 UTC
Created attachment 222895 [details] [review]
Test for modifier keys correctly in EogWindow

See http://developer.gnome.org/gtk3/stable/checklist-modifiers.html for an explanation
of how this works.

Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Comment 6 Federico Mena Quintero 2012-08-29 23:16:21 UTC
Created attachment 222896 [details] [review]
bgo#659830 - Arrow keys should always navigate, never scroll

We use plain arrow keys to navigate the image list, regardless of whether the image is
zoomed or whether it has the focus.  We use Alt+arrows to scroll the image.

This is to make it easier to browse an image collection while at the same time zooming
on images from time to time.

Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Comment 7 Jasper St. Pierre (not reading bugmail) 2012-08-29 23:18:32 UTC
Review of attachment 222895 [details] [review]:

I thought GDK masked those out for you when it sent you events now, but maybe not. It should probably be done.

In any case, sure.
Comment 8 Claudio Saavedra 2012-08-30 13:32:00 UTC
Jasper, did you get an OK from Felix to accept this patch?
Comment 9 Felix Riemann 2012-09-01 15:52:47 UTC
(In reply to comment #8)
> Jasper, did you get an OK from Felix to accept this patch?

Claudio, you can give OKs too. ;)
But no I wasn't asked. So, I'm a bit surprised to see it already committed.
Would be nice if you could wait for a Maintainer-OK next time.

Okay, let's see what we got here...
Comment 10 Felix Riemann 2012-09-01 15:56:42 UTC
Review of attachment 222895 [details] [review]:

As far as I understand this is some general code cleanup that looks good to have. So, let's keep it.
Comment 11 Felix Riemann 2012-09-01 16:04:56 UTC
Review of attachment 222896 [details] [review]:

Looks ok too!
Comment 12 Felix Riemann 2012-09-01 16:18:33 UTC
commit 43e98cdad65f957cb675957d99943ed64d27e4aa
Author: Felix Riemann <>
Date:   Sat Sep 1 18:16:40 2012 +0200

    Fix arrow key shortcuts in Go menu to reflect behavioural changes
    
    https://bugzilla.gnome.org/show_bug.cgi?id=659830
Comment 13 Felix Riemann 2012-09-01 16:24:31 UTC
commit 22e9c6ce7d7dbc1918a38bf8917e4299271c8e35
Author: Felix Riemann <>
Date:   Sat Sep 1 18:23:38 2012 +0200

    help: Fix keys in shortcut list to reflect changed bindings
    
    https://bugzilla.gnome.org/show_bug.cgi?id=659830
Comment 14 Felix Riemann 2012-09-01 16:25:44 UTC
Alright!
Thanks for patching, but please ask maintainers before pushing your changes next time.
---
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 15 Jasper St. Pierre (not reading bugmail) 2012-09-01 19:06:26 UTC
Whoops, sorry. I was just a moron and marked it ACN (it looked correct) without thinking. I didn't push it.