Test for modifier keys correctly in EogWindow

See http://developer.gnome.org/gtk3/stable/checklist-modifiers.html for an explanation
of how this works.

Signed-off-by: Federico Mena Quintero <federico@gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=659830